VerilogAParser.jl/test/errors/preproc_undef.va
module preproc_undef(p, n);
    `IMPIcc( RGATEMOD      , 0            , ""           , 0           , 1           , "Gate resistance model selector")
endmodule